<resources>
    <string name="app_name">QR Event</string>
    <string name="subtitle_home">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="title">Bienvenido</string>
    <string name="sign_in_button">Iniciar Sesión</string>
    <string name="sing_in_button">Registrate</string>
    <string name="text_signup_button">¿Registrate?</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirma Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="title_signIn">Inicio de Sesión</string>
    <string name="title_signUp">Registro</string>
    <string name="sing_up_button">Crear cuenta</string>
    <string name="hint_name">nombre</string>
</resources>
